force-app/main/default/objects/B25__System_Setting__c/fields/B25__Numeric_Value__c.field-meta.xml
<CustomField>
    <fullName>B25__Numeric_Value__c</fullName>
    <label>Numeric Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>