force-app/main/default/objects/B25__System_Setting__c/fields/B25__String_Value__c.field-meta.xml
<CustomField>
    <fullName>B25__String_Value__c</fullName>
    <label>String Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>