force-app/main/default/objects/B25__System_Setting__c/listViews/B25__System_Settings.listView-meta.xml
<ListView>
    <fullName>B25__System_Settings</fullName>
    <columns>NAME</columns>
    <columns>B25__Numeric_Value__c</columns>
    <columns>B25__Boolean_Value__c</columns>
    <columns>B25__String_Value__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>System Settings</label>
    <language>en_US</language>
</ListView>